# cit

./: .gitignore  404.html  Justfile  README.md  completions.conf  index.html  mkdocs.yml  package.json  source.sh  test.sh  workflow.sh
commands/: Justfile  add.just  cit.just  index.html  kill.just  open.just  run.just  scaffold.just
completions/: cit-completion.sh  parse-config.sh
customization/: index.html
docs/: commands.md  customization.md  index.md  installation.md
installation/: index.html
resources/: completions.sh
resources/cit-images/: Justfile  README.md  pyproject.toml
resources/cit-images/src/cit_images/: __init__.py  __init__.pyi  predict.py  reading.py
resources/images/boxes/: console-export-2024-4-7_17-42-21.txt
resources/python/: .gitignore  Justfile
resources/recipes/: docker.just  gh-pages.just
resources/scripts/: bump.sh  cases.sh  find_android_device.sh  find_git_root.sh  find_lan_ip.sh  replace.sh
resources/templates/layouts/: DesktopPage.tsx  MobilePage.tsx  Page.tsx
resources/templates/node18-ts/: .eslintrc.cjs  package.json  tsconfig.json
resources/templates/python-pkg/: Justfile  pyproject.toml
resources/templates/react-capacitor/: Justfile  (+3 more)
resources/templates/react-capacitor-vite/: Justfile  Justfile.android.just  capacitor.config.ts  index.html  package.json
resources/workspaces/: lite-mode.code-workspace
search/: search_index.json
templates/: capacitor.just  deploy.yml
util/: find-git.sh  good-degit.sh
versions/v1/: Justfile  completions.conf  workflow.sh
versions/v2/: completions.sh  source.sh
(+37 files in other folders)
